fixed spacing

--- a/components/ProjectlistItem.module.css
+++ b/components/ProjectlistItem.module.css
@@ -71,5 +71,5 @@
 }
 
 .yearAndDate {
-  padding-top: 0.2em;
+  padding-top: 0.5em;
 }
